--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     // Spring Boot Starter
     testImplementation ('org.springframework.boot:spring-boot-starter-test')
+    testImplementation ('org.springframework.security:spring-security-test')
 
     // Lombok
     implementation ('org.projectlombok:lombok')
@@ -36,15 +37,14 @@ dependencies {
 
     // DB
     runtimeOnly ('mysql:mysql-connector-java') //mysql8
-    //runtimeOnly 'mysql:mysql-connector-java:5.1.47' //mysql5
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
-
 
     // Web
     implementation ('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter')
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-security')
 
     // Validation
     implementation('org.springframework.boot:spring-boot-starter-validation')
@@ -55,7 +55,6 @@ dependencies {
 
     // Swagger
     implementation ('org.springdoc:springdoc-openapi-ui:1.6.14')
-
 
 }
 
