update: Spring Security 의존성 제거 - 없이 구현하기로 함

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,21 +15,21 @@ spring:
       platform: mysql
   datasource:
     url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&setTimezone=Asia/Seoul # 변경해주세요
-    username: # username
-    password: # password
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8버전
-    # driver-class-name: com.mysql.jdbc.Driver # mysql 5버전
-  OAuth2:
-    google:
-      url: https://accounts.google.com/o/oauth2/v2/auth
-      client-id: # client-id
-      client-secret:  # client-secret
-      callback-login-url: http://localhost:9000/app/users/auth/google/login/callback # 등록한 정보에 맞게 수정해주세요
-      scope: https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile # 등록한 정보에 맞게 수정해주세요
+  OAuth:
+    kakao:
+      login-url: https://kauth.kakao.com/oauth/authorize
+      client-id: ${KAKAO_REST_API_KEY}
+      redirect-url: http://localhost:3000/login/kakao
+      token-uri: https://kauth.kakao.com/oauth/token
+
+
 
 spring.sql.init.platform: mysql
 server:
-  port: 9000
+  port: 3000
 
 springdoc:
   swagger-ui:
@@ -47,7 +47,7 @@ springdoc:
     - /**
 
 jwt:
-  secret-key: UwKYibQQgkW7g-*k.ap9kje-wxBHb9wdXoBT4vnt4P3sJWt-Nu  # JWT key. 수정해주세요
+  secret-key: ${JWT_SECRET}  # JWT key. 수정해주세요
 
 ---
 spring:
