--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,18 +18,15 @@ spring:
   sql:
     init:
       platform: mysql
-  datasource:
-    url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&setTimezone=Asia/Seoul # 변경해주세요
-    username: ${LOCAL_DB_USERNAME}
-    password: ${LOCAL_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8버전
-  OAuth2:
-    kakao:
-      login-uri: https://kauth.kakao.com/oauth/authorize
-      client-id: ${KAKAO_REST_API_KEY}
-      redirect-uri: http://localhost:3000/login/kakao
-      token-uri: https://kauth.kakao.com/oauth/token
-      user-info-uri: https://kapi.kakao.com/v2/user/me
+  jpa:
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
+    database-platform: com.example.demo.common.config.CustomMySQLDialect
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    generate-ddl: false
 
 server:
   port: 3000
@@ -52,31 +49,30 @@ springdoc:
 jwt:
   secret-key: ${JWT_SECRET}  # JWT key. 수정해주세요
 
-
 ---
 spring:
   config:
     activate:
       on-profile: "prod"
   jpa:
-    database-platform: com.example.demo.common.config.CustomMySQLDialect
     hibernate:
       ddl-auto: none
-      # create, update, create-drop, none 등의 옵션이 있습니다.
-      # create: 기존테이블 삭제 후 다시 생성
-      # update: 변경된 부분만 반영
-      # create-drop: create와 같으나 종료 시점에 테이블 DROP
-      # none: 사용하지 않음
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    # DDl 생성 시 데이터베이스 고유의 기능 사용여부
-    generate-ddl: false
-    # 실행되는 쿼리문 보여주기 여부
     show-sql: false
     properties:
       hibernate:
         format_sql: false
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&setTimezone=Asia/Seoul # 변경해주세요
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8버전
+OAuth2:
+  kakao:
+    login-uri: https://kauth.kakao.com/oauth/authorize
+    client-id: ${KAKAO_REST_API_KEY}
+    redirect-uri: http://localhost:3000/login/kakao
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
 
 ---
 spring:
@@ -84,16 +80,24 @@ spring:
     activate:
       on-profile: "dev"
   jpa:
-    database-platform: com.example.demo.common.config.CustomMySQLDialect
     hibernate:
-      ddl-auto: create-drop
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    generate-ddl: false
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  datasource:
+    url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&setTimezone=Asia/Seoul # 변경해주세요
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8버전
   devtools:
     livereload:
       enabled: true
+OAuth2:
+  kakao:
+    login-uri: https://kauth.kakao.com/oauth/authorize
+    client-id: ${KAKAO_REST_API_KEY}
+    redirect-uri: http://localhost:3000/login/kakao
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
