feat: firebase 기반 이미지/동영상 업로드, 읽기 기능 - firebase에 이미지 저장 -> 엔티티에는 firebase 내에 경로+파일이름 저장(컬럼명 dir) -> 응답시에 2시간 유효한 url 생성해서 접근

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     // Swagger
     implementation ('org.springdoc:springdoc-openapi-ui:1.6.14')
 
+    // firebase
+    implementation('com.google.firebase:firebase-admin:8.1.0')
+
 }
 
 test {
