feat: 급하니까 한번에 커밋

--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,21 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
+sourceCompatibility = 17
+targetCompatibility = 17
 compileJava.options.encoding = 'UTF-8'
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
+    }
+}
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/resources"
+            includes = ["**/*.json", "**/*.yml", "**/*.html"]
+        }
     }
 }
 
