--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,34 +34,22 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
-    - name: yml jwt 환경변수 설정
+    - name: yml 환경변수 설정
       uses: microsoft/variable-substitution@v1
       with:
         files: ./src/main/resources/application.yaml
       env:
+        spring.profiles.active: prod
         jwt.secret: ${{ secrets.JWT_SECRET }}
-        jwt.accessExpirationTime: ${{ secrets.JWT_EXPIRATION }}
-        jwt.refreshExpirationTime: ${{ secrets.JWT_REFRESH_EXPIRATION }}
-    - name: yml db 환경변수 설정
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: ./src/main/resources/application-prod.yaml
-      env:
         spring.datasource.url: ${{ secrets.DB_URL }}
         spring.datasource.username: ${{ secrets.DB_USERNAME }}
         spring.datasource.password: ${{ secrets.DB_PASSWORD }}
-    - name: yml redis 환경변수 설정
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: ./src/main/resources/application.yaml
-      env:
-        spring.redis.host: ${{ secrets.REDIS_HOST }}
-        spring.redis.post: ${{ secrets.REDIS_PORT }}
-    - name: Set published time in application.yml
-      run: |
-        sed -i "s/publishedAt:.*/publishedAt: ${{ env.PUBLISHED_AT }}/g" ./src/main/resources/application.yaml
-      env:
-        PUBLISHED_AT: $(date -d '9 hours' '+%Y-%m-%d %H:%M:%S KST')
+        OAuth2.kakao.client-id: ${{ secrets.KAKAO_REST_API_KEY }}
+        port-one.rest-api-key: ${{ secrets.PORT_ONE_REST_API_KEY }}
+        port-one.secret: ${{ secrets.PORT_ONE_SECRET }}
+        port-one.hostname: ${{ secrets.PORT_ONE_HOSTNAME }}
+        port-one.customer-id: ${{ secrets.PORT_ONE_CUSTOMER_ID }}
+
     - name: gradlew에 실행 권한 부여
       run: chmod +x ./gradlew
     - name: 프로젝트 빌드
