--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,26 +29,33 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
+
     - name: JDK 17 설치
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'corretto'
-    - name: yml 환경변수 설정
+
+    - name: application.yaml 환경변수 설정
       uses: microsoft/variable-substitution@v1
       with:
         files: ./src/main/resources/application.yaml
       env:
-        spring.profiles.active: prod
         jwt.secret: ${{ secrets.JWT_SECRET }}
-        spring.datasource.url: ${{ secrets.DB_URL }}
-        spring.datasource.username: ${{ secrets.DB_USERNAME }}
-        spring.datasource.password: ${{ secrets.DB_PASSWORD }}
-        OAuth2.kakao.client-id: ${{ secrets.KAKAO_REST_API_KEY }}
         port-one.rest-api-key: ${{ secrets.PORT_ONE_REST_API_KEY }}
         port-one.secret: ${{ secrets.PORT_ONE_SECRET }}
         port-one.hostname: ${{ secrets.PORT_ONE_HOSTNAME }}
         port-one.customer-id: ${{ secrets.PORT_ONE_CUSTOMER_ID }}
+
+    - name: application-prod.yaml 환경변수 설정
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: ./src/main/resources/application-prod.yaml
+      env:
+        spring.datasource.url: ${{ secrets.DB_URL }}
+        spring.datasource.username: ${{ secrets.DB_USERNAME }}
+        spring.datasource.password: ${{ secrets.DB_PASSWORD }}
+        OAuth2.kakao.client-id: ${{ secrets.KAKAO_REST_API_KEY }}
 
     - name: gradlew에 실행 권한 부여
       run: chmod +x ./gradlew
