chore: 환경변수 빠진거 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,6 +42,7 @@ jobs:
         files: ./src/main/resources/application.yaml
       env:
         jwt.secret-key: ${{ secrets.JWT_SECRET }}
+        firebase.key: ${{ secrets.FIREBASE_KEY }}
         port-one.rest-api-key: ${{ secrets.PORT_ONE_REST_API_KEY }}
         port-one.secret: ${{ secrets.PORT_ONE_SECRET }}
         port-one.hostname: ${{ secrets.PORT_ONE_HOSTNAME }}
