--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,6 @@ files:
   - source:  /
     destination: /home/ubuntu/sns
     overwrite: yes
-    file_exists_behavior: OVERWRITE
 
 permissions:
   - object: /
@@ -14,8 +13,8 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: scripts/stop.sh
+    - location: /scripts/stop.sh
       timeout: 60
   ApplicationStart:
-    - location: scripts/start.sh
+    - location: /scripts/start.sh
       timeout: 60
